objects/CDHPISGIntegrationSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISGURL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISGURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISG_SF_Org_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISG SF Org URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Password</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Session URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CDHPISGIntegrationSettings</label>
</CustomObject>